<resources>
    <string name="app_name">Binair Buyer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_menu">Notification</string>
    <string name="belum_punya_akun"><font color="#000000">Belum punya akun? </font><font color="#F37C20">Daftar</font>
    </string>
    <string name="btn_cari_penerbangan">Cari Penerbangan</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="detail_login">Isi form di bawah untuk mendapatkan akses</string>
    <string name="selamat_datang_login">Selamat Datang</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun"><font color="#000000">Sudah punya akun? </font><font color="#F37C20">Masuk</font></string>
    <string name="cari_penerbangan">Cari Penerbangan</string>
    <string name="label_dari">Dari</string>
    <string name="ex_kota_dari">Jakarta - CGK</string>
    <string name="label_destinasi">Destinasi</string>
    <string name="ex_kota_tujuan">Surabaya - SUB</string>
    <string name="label_tanggal_berangkat">Tanggal Berangkat</string>
    <string name="ex_tgl_brkt">Jumat, 9 Desember 2022</string>
    <string name="label_tanggal_pulang">Tanggal Pulang</string>
    <string name="label_penumpang">Penumpang</string>
    <string name="ex_jml_penumpang">1 Penumpang</string>
    <string name="label_kelas">Kelas</string>
    <string name="label_sekali_jalan">Sekali Jalan</string>
    <string name="label_pulang_pergi">Pulang Pergi</string>
    <string name="buy_ticket">Beli Tiket</string>
    <string name="label_promo_tiket">Promo Tiket</string>
    <string name="ex_promo_title">Stay Happy Weekly Bersama OCBC NISP, Dapatkan Diskon 12%</string>
    <string name="simpan">Simpan</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="label_dewasa">Dewasa (12 tahun ke atas)</string>
    <string name="judul_atur_penumpang">Atur Penumpang</string>
    <string name="label_anak">Anak (2 – 11 tahun)</string>
    <string name="tambah_penumpang">Tambah Penumpang</string>
    <string name="kurangi_penumpang">Kurangi Penumpang</string>
    <string name="pesan_tiket">Pesan Tiket</string>
    <string name="label_detail_penumpang">Detail Penumpang</string>
    <string name="tipe_penumpang">(Dewasa 1)</string>
    <string name="titel">Titel</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="tipe">Tipe</string>
    <string name="nomor_identitas">Nomor Identitas</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_telp">Nomor Telepon</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="book">Pesan</string>
    <string name="review">Review</string>
    <string name="pay">Pembayaran</string>
    <string name="e_ticket">E-Tiket</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="detail_pemesanan">Detail Pemesanan</string>
    <string name="id_pemesanan">ID Pemesanan</string>
    <string name="ex_id_pemesanan">877082217</string>
    <string name="penerbangan">Penerbangan</string>
    <string name="jumlah_penumpang">Jumlah Penumpang</string>
    <string name="ex_nama_pemesan">Akbar Maulana</string>
    <string name="dewasa">Dewasa</string>
    <string name="detail_pembayaran">Detail Pembayaran</string>
    <string name="total_harga">Total Harga</string>
    <string name="nominal_harga">Rp. 830.000</string>
    <string name="bayar">Bayar</string>
    <string name="payment_logo">Payment Logo</string>
    <string name="setuju_bayar"><![CDATA[Dengan menekan tombol bayar maka Anda menyetujui syarat dan ketentuan Binair Airline & Ketentuan dan Kebijakan Privasi]]></string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="ex_kode_penerbangan">IN 230</string>
    <string name="gate">Gate</string>
    <string name="ex_gate">17</string>
    <string name="kursi">Kursi</string>
    <string name="ex_kursi">2B</string>
    <string name="unduh_e_tiket">Unduh E-Tiket</string>
    <string name="pesan_tiket_penerbangan_lagi">Pesan tiket penerbangan lagi</string>
    <string name="login_untuk_melanjutkan">Masuk untuk melanjutkan</string>
    <string name="anda_tidak_dapat_melanjutkan_pemesanan_tanpa_login_terlebih_dahulu">Anda tidak dapat melanjutkan pemesanan tanpa login terlebih dahulu</string>
    <string name="batal">Batal</string>
    <string name="log_out">Keluar</string>
    <string name="tidak_ada_wishlist">Tidak ada wishlist</string>
    <string name="wishlist">Wishlist</string>
    <string name="riwayat_pemesanan">Riwayat Pemesanan</string>
    <string name="belum_dibayar">Belum Dibayar</string>
    <string name="profil_pengguna">Profil Pengguna</string>
    <string name="profil">Profil</string>
    <string name="silahkan_login">Silahkan login terlebih dahulu untuk menggunakan fitur ini</string>
    <string name="filter">Filter :</string>
    <string name="kode_pemesanan">Kode Pemesanan :</string>
    <string name="time">Time</string>
    <string name="harga_dewasa">Harga Dewasa</string>
    <string name="harga_anak">Harga Anak</string>
    <string name="gratis_20_kg">Gratis 20 Kg</string>
    <string name="refund_sebagian">Refund Sebagian</string>
    <string name="bisa_reschedule">Bisa Reschedule</string>
    <string name="bagasi">Bagasi</string>
    <string name="keuntungan">Keuntungan :</string>
    <string-array name="spinner_titel">
        <item>Tuan</item>
        <item>Nyonya</item>
        <item>Nona</item>
    </string-array>
    <string-array name="spinner_tipe">
        <item>KTP</item>
        <item>SIM</item>
    </string-array>
    <string name="promo_detail">Detail Promo</string>
    <string name="promo_title">Stay Happy Weekly Bersama OCBC NISP, Dapatkan Diskon 12%</string>
    <string name="SdanK">Syarat dan ketentuan :</string>
    <string name="syarat_dan_ketentuan">1. Periode Promo 1 Juli - 31 Desember 2022\n2. Periode Menginap: Kapan pun\n3. Promo ini berlaku setiap hari Selasa selama periode promo.\n4. Penggunaan kupon berbasis first-come, first serve selama kuota masih tersedia.\n5. Dapatkan diskon sebesar 12% hingga Rp.100.000 menggunakan kode promo WEEKLYHO dengan minimal pembelian Rp. 1.200.000 dan berlaku untuk semua hotel.\n6. Promo ini hanya berlaku untuk pembayaran dengan menggunakan metode pembayaran semua Kartu Kredit OCBC NISP.\n7. Promo hanya bisa dipakai dengan menggunakan mata uang IDR/Indonesian Rupiah.\n8. Promo hanya bisa dipakai sekali per akun dan per minggu selama periode promo.\n9. Promo berlaku untuk pemesanan melalui aplikasi Airpaz.\n10. Aplikasi dapat di download dengan klik link ini https://airpaz.link/android (Android) dan https://airpaz.link/ios (iOS).\n11. Promo tidak dapat dipindahtangankan dan tidak dapat digunakan bersamaan dengan promosi atau diskon, termasuk kupon serta penawaran keanggotaan lainnya.\n12. Promo ini tidak dapat ditransfer atau ditukar dengan uang tunai, batas kredit atau diskon/ produk/ layanan lainnya.\n13. Pemegang kartu yang memenuhi syarat dan menggunakan promo ini terikat oleh syarat dan ketentuan Airpaz dan OCBC NISP.\n14. Airpaz dan OCBC NISP berhak untuk mengakhiri, mengubah atau menambah syarat dan ketentuan ini dari waktu ke waktu dengan pemberitahuan minimal lima (5) hari kalender sebelumnya kepada pengguna akun OCBC NISP sebelum syarat dan ketentuan baru diberlakukan.\n15. Airpaz dan OCBC NISP berhak untuk membatalkan promo ini apabila transaksi tidak memenuhi Syarat dan Ketentuan yang berlaku.\n16. Promo bersifat Non-refundable dan tidak dapat diuangkan.</string>
    <string name="batas_promo">Batas Promo</string>
    <string name="lihat_lebih_lanjut">Lihat lebih lanjut</string>
    <string name="voucher_promo_code" />
    <string name="client_id">214017739948-b18qptodbi5i0sth8fgukauks2raoi61.apps.googleusercontent.com</string>
    <string name="label_economy_class">Kelas Ekonomi</string>
    <string name="label_tujuan">Tujuan</string>
    <string name="labelJam">Jam</string>
    <string name="lanjutkan_pemesanan">Lanjutkan Pemesanan</string>
    <string name="gratis_bagasi_20_kg">Gratis bagasi 20 Kg</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="detail_wishlist">Detail Wishlist</string>
    <string name="tandai_sudah_dibaca">Tandai sudah dibaca</string>
    <string name="sudah_dibaca">Sudah dibaca</string>
    <string name="tiket">Tiket</string>
    <string name="promo">Promo</string>
    <string name="terbaru">Terbaru</string>
    <string name="masuk_sebagai">Masuk Sebagai</string>
    <string name="detail_kontak_untuk_e_ticket">Detail Kontak (untuk E-Ticket)</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="swipe_up">Swipe Up untuk melanjutkan</string>
    <string name="masuk_untuk_mendapatkan_seluruh_akses">Masuk untuk mendapatkan seluruh akses!</string>
    <string name="masuk">Masuk</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="tiket_tidak_ditemukan">Tiket tidak ditemukan</string>
    <string name="member_silver">Member Silver</string>
    <string name="tertunda">Tertunda</string>
    <string name="lunas">Lunas</string>
    <string name="_20_kg">20 Kg</string>
    <string name="deskripsi_bagasi">Kemaslah barang bawaan Anda! Setiap penumpang hanya diperbolehkan membawa bagasi 20 kg</string>
    <string name="total">Total</string>
    <string name="ex_total_harga">Rp. 1.000.000</string>
    <string name="berangkat">Berangkat</string>
    <string name="x2">x2</string>
    <string name="pulang">Pulang</string>
    <string name="gratis">GRATIS</string>
    <string name="lanjutkan_pembayaran">Lanjutkan Pembayaran</string>
    <string name="easy_way_around_the_world">Easy Way Around The World</string>
    <string name="copyright_2022_binair_all_right_reserved">Copyright © 2022 BinAir. All right reserved</string>
    <string name="nomor_penerbangan">Nomor Penerbangan :</string>
    <string name="in123">IN123</string>
    <string name="jakarta">Jakarta</string>
    <string name="cgk">CGK</string>
    <string name="dash">-</string>
    <string name="soekarno_hatta">Soekarno Hatta</string>
    <string name="ex_durasi">1j 20 menit</string>
    <string name="detail_penumpang_1">Detail Penumpang 1</string>
    <string name="apakah_data_pemesanan_anda_sudah_benar">Apakah data pemesanan Anda sudah benar?</string>
    <string name="anda_tidak_bisa_mengubah_data_pemesanan_setelah_proses_pembayaran">Anda tidak bisa mengubah data pemesanan setelah proses pembayaran</string>
    <string name="kembali_ke_edit">Kembali ke Edit</string>
    <string name="hasil_pencarian">Hasil Pencarian</string>
    <string name="kode_promo">Kode Promo</string>
    <string name="keluar">Keluar</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="label_lupa_password">Lupa Password</string>
    <string name="masukkan_email_anda_untuk_mereset_password">Masukkan email anda untuk mereset password</string>
    <string name="kirim">Kirim</string>
</resources>