<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <TextView
        android:id="@+id/tvTitlePassenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_atur_penumpang"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/labelDewasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dewasa"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tvTitlePassenger"/>
    <ImageButton
        android:id="@+id/btnMinusDewasa"
        android:src="@drawable/ic_remove"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/blue_circle_button"
        android:layout_marginTop="4dp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@id/labelDewasa"
        android:layout_below="@id/tvTitlePassenger"
        android:contentDescription="@string/tambah_penumpang"/>
    <TextView
        android:id="@+id/tvJmlDewasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="2dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/btnMinusDewasa"
        android:layout_below="@id/tvTitlePassenger"/>
    <ImageButton
        android:id="@+id/btnPlusDewasa"
        android:src="@drawable/ic_add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/blue_circle_button"
        android:layout_marginTop="4dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tvTitlePassenger"
        android:contentDescription="@string/kurangi_penumpang"/>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerDewasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@id/labelDewasa"/>
    <TextView
        android:id="@+id/labelAnak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_anak"
        android:textSize="16sp"
        android:layout_below="@id/dividerDewasa"/>
    <ImageButton
        android:id="@+id/btnMinusAnak"
        android:src="@drawable/ic_remove"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/blue_circle_button"
        android:layout_marginTop="24dp"
        android:layout_marginStart="105dp"
        android:layout_toEndOf="@id/labelAnak"
        android:layout_below="@id/btnMinusDewasa"
        android:contentDescription="@string/tambah_penumpang"/>
    <TextView
        android:id="@+id/tvJmlAnak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/btnMinusAnak"
        android:layout_below="@id/tvJmlDewasa"/>
    <ImageButton
        android:id="@+id/btnPlusAnak"
        android:src="@drawable/ic_add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/blue_circle_button"
        android:layout_marginTop="24dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/btnPlusDewasa"
        android:contentDescription="@string/kurangi_penumpang"/>
    <Button
        android:id="@+id/btnSimpan"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:layout_marginTop="12dp"
        android:layout_below="@id/labelAnak"/>
</RelativeLayout>