<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:contentPadding="22dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvTitleAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_lupa_password"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvDetailAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_email_anda_untuk_mereset_password"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/tvTitleAlert" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputContainer"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_below="@id/tvDetailAlert"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/content_grey"
            app:hintTextColor="@color/black"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kirim"
            style="@style/button"
            android:layout_below="@id/emailInputContainer"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            style="@style/button"
            android:backgroundTint="@color/SB_Grey"
            android:layout_below="@id/btnSend"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>